--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,19 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>github</id>
+      <distributionManagement>
+        <repository>
+          <id>github</id>
+          <name>GitHub Packages</name>
+          <url>https://maven.pkg.github.com/OdunlamiZO/thymeleaf-ui-fragments</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+  </profiles>
+
   <build>
     <resources>
       <resource>
